--- a/configuration/config.properties
+++ b/configuration/config.properties
@@ -1,28 +1,24 @@
 #In this file we are storing all the variables which is used in entire project to avoid "Hard Coding" in programs.
 
 #Driver required for running the code 
-chromePath = ./drivers/chromedriver
-firefoxPath = ./drivers/geckodriver
+chromePath = /home/ubuntu/Downloads/drivers/chromedriver
+firefoxPath = /home/ubuntu/workspace_nmc/InstaAutoProject/drivers/geckodriver
 iePath = ./drivers/iedriver
+phantomjsPath = ./drivers/phantomjs
 
 #Url Related data 
 baseURL = http://10.8.55.122/instanmc/loginForm.do
-
-
 homePageUrl = http://10.8.55.122/instanmc/home.do
 
 #Login credential for login
 userName = InstaAdmin
 password = Insta@123
 
-
 #Excel Related Data 
-excelLocatorPath = ./src/test/java/com/nmc/api/testdata/Locators.xlsx
-excelLocatorSheetName = Registration
-
-excelRegistrationDataPath=./src/test/java/com/nmc/api/testdata/registrationData.xlsx
-excelRegistrationDataSheetName=Sheet1
+excelRegistrationDataPath=./resources/registrationData.xlsx
+excelRegistrationDataSheetName=Sheet2
 
 excelRegInfoDataPath=./src/test/java/com/nmc/api/testdata/RegInfo.xlsx
 excelRegInfoDataSheetName=Sheet2
 
+loginUserId=userId
